# Language-Navigation-in-Remote-Sensing-Scenes

./: CITATION.cff  LICENSE  README.md  __init__.py  bev_lift.py  bootstrap_stats.py  config.py  data.py  demo.py  encoder.py  evaluate.py  evaluate_telemetry.py  geometry.py  grounding.py  losses.py  make_synthetic_dataset.py  memory.py  metrics.py  model.py  pyproject.toml  requirements.txt  soar_tiny.yaml  telemetry_noise.py  test_model.py  text.py  tokenizer.py  train.py  waypoint.py
