[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "soar-uav-vln"
version = "0.1.0"
description = "Telemetry-conditioned metric-consistent aerial vision-language navigation"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
  "torch>=2.1",
  "numpy>=1.24",
  "PyYAML>=6.0",
  "pandas>=2.0",
]

[tool.setuptools.packages.find]
include = ["soar*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
